# soma

./: .gitignore  README.md  config.public.mk  index.html  justfile  main.js  menu.json  mkdocs.yml  ontology_grounding_report.tsv  package-lock.json  package.json  project.justfile  pyproject.toml  style.css
.claude/skills/linkml-validate/: SKILL.md
.claude/skills/oaklib/: SKILL.md
.claude/skills/pdf-to-yaml/: SKILL.md
.claude/skills/yaml-to-excel/: SKILL.md
.github/workflows/: deploy-docs.yaml  main.yaml  pypi-publish.yaml
examples/: add_hyperlinks.py  measurement_class_attributes.csv  measurement_class_attributes_backup.csv  measurement_class_attributes_with_links.csv
project/excel/: soma.xlsx
project/jsonschema/: soma.schema.json
project/owl/: soma.owl.ttl
project/sqlschema/: soma.sql
scripts/: apply_mappings_to_schema.py  generate_measurement_class_attributes_csv.py  generate_ontology_mappings.py  yaml_to_excel.py
src/docs/: Liu2024_PM25_CFTR_SOMA.xlsx  Montgomery2020_PM25_Mucociliary_SOMA.xlsx  about.md  examples.md  index.md
src/docs/stylesheets/: extra.css
src/outcomes_working_group/datamodel/: outcomes_working_group.py  outcomes_working_group_pydantic.py
src/outcomes_working_group/schema/: aop_framework.yaml  assay_base.yaml  assay_microschemas.yaml  measurement_base.yaml  measurement_microschemas.yaml  outcomes_working_group.yaml  v2.yaml
src/soma/: __init__.py
src/soma/datamodel/: __init__.py  soma.py  soma_pydantic.py
src/soma/schema/: aop_framework.yaml  assay_base.yaml  measurement_base.yaml  measurement_microschemas.yaml  soma.yaml  v1.yaml  v2.yaml
tests/: __init__.py  test_data.py  test_yaml_to_excel.py
tests/data/: README.md
tests/data/valid/: Container-asl.yaml  Container-assay.yaml  Container-balf_sputum.yaml  Container-biomarker_measurements.yaml  Container-cftr.yaml  Container-mcc.yaml  (+24 more)
(+10 files in other folders)
